--- a/episodes.html
+++ b/episodes.html
@@ -11,10 +11,10 @@
     <!--Navbar-->
     <div class="navbar">
         <div class="container flex">
-            <a href="index.html"><img class="logo" src="images/amateur-logo.png"></a>
+            <a href="index.html" class="logo"><img src="images/amateur-logo.png"></a>
             <nav>
                 <ul>
-                    <li><a href="episodes.html">EPISODES</a></li>
+                    <li><a class="current-page" href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
                     <li><a href="social.html">SOCIAL</a></li>
