--- a/episodes.html
+++ b/episodes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amateure's Guide to Humanity | Poodcast | Home Page</title>
+    <title>Amateure's Guide to Humanity | Poodcast | Episodes</title>
     <link rel = "stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -21,6 +21,17 @@
                 </ul>
             </nav>
         </div>
+    </div>
+    <div class="flex">
+        <h1 class="episodes-header">Listen to our episdoes</h1>
+    </div>
+    <div class = "container grid episodes">
+        <img src="images/episode-image.jpg">
+        <img src="images/episode-image.jpg">
+        <img src="images/episode-image.jpg">
+        <img src="images/episode-image.jpg">
+        <img src="images/episode-image.jpg">
+        <img src="images/episode-image.jpg">
     </div>
 </body>
 </html>
