added the about page. set the background to fixed position

--- a/about.html
+++ b/about.html
@@ -16,14 +16,21 @@
             <nav>
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a class="current-page" href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
                     <li><a href="social.html">SOCIAL</a></li>
                 </ul>
             </nav>
         </div>
     </div>
-    <div class="filler-body">
+    <div class="flex">
+        <h1 class="episodes-header">Meet the Amateurs</h1>
+    </div>
+    <div class = "container grid about">
+        <div></div>
+        <img src="images/mandi-kevin.png">
+        <div></div>
+    </div>
 
     </div>
 </body>
