--- a/social.html
+++ b/social.html
@@ -18,7 +18,7 @@
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
-                    <li><a href="social.html">SOCIAL</a></li>
+                    <li><a class="current-page" href="social.html">SOCIAL</a></li>
                 </ul>
             </nav>
         </div>
