--- a/subscribe.html
+++ b/subscribe.html
@@ -17,14 +17,11 @@
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="subscribe.html">SUBSCRIBE</a></li>
+                    <li><a class="current-page" href="subscribe.html">SUBSCRIBE</a></li>
                     <li><a href="social.html">SOCIAL</a></li>
                 </ul>
             </nav>
         </div>
-    </div>
-    <div class="filler-body">
-
     </div>
 </body>
 </html>
