--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.svg"/>
     <link rel = "stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body class="home-page">
     <!--Navbar-->
     <div class="navbar">
         <div class="container flex">
-            <a href="index.html"><img class="logo" src="images/amateur-logo.png"></a>
+            <a href="index.html"><img class="logo" src="images/header-image.png"></a>
             <nav>
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
-                    <li><a href="social.html">SOCIAL</a></li>
+                    <li id="last-nav"><a href="social.html">SOCIAL</a></li>
                 </ul>
             </nav>
         </div>
