--- a/social.html
+++ b/social.html
@@ -12,13 +12,13 @@
     <!--Navbar-->
     <div class="navbar">
         <div class="container flex">
-            <a href="index.html"><img class="logo" src="images/amateur-logo.png"></a>
+            <a href="index.html"><img class="logo" src="images/header-image.png"></a>
             <nav>
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
-                    <li><a class="current-page" href="social.html">SOCIAL</a></li>
+                    <li id="last-nav"><a class="current-page" href="social.html">SOCIAL</a></li>
                 </ul>
             </nav>
         </div>
