Redesign and fixed somet typos. Still have some alignment to do

--- a/episodes.html
+++ b/episodes.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amateure's Guide to Humanity | Poodcast | Episodes</title>
+    <title>Amateur's Guide to Humanity | Podcast | Episodes</title>
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.svg"/>
     <link rel = "stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body class="episodes-page">
     <!--Navbar-->
     <div class="navbar">
-        <div class="container flex">
-            <a href="index.html"><img class="logo" src="images/header-image.png"></a>
+        <div class="container flex navbar">
+            <a class = "logo" href = "index.html"><img src="images/header-image.svg"></a>
             <nav>
                 <ul>
-                    <li><a class="current-page" href="episodes.html">EPISODES</a></li>
+                    <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
                     <li id="last-nav"><a href="social.html">SOCIAL</a></li>
@@ -27,12 +27,11 @@
         <h1 class="episodes-header">Listen to our episdoes</h1>
     </div>
     <div class = "container grid episodes">
-        <img src="images/episode-image.jpg">
-        <img src="images/episode-image.jpg">
-        <img src="images/episode-image.jpg">
-        <img src="images/episode-image.jpg">
-        <img src="images/episode-image.jpg">
-        <img src="images/episode-image.jpg">
+        <div id="buzzsprout-player-9431975"></div><script src="https://www.buzzsprout.com/1870575/9431975-how-to-community.js?container_id=buzzsprout-player-9431975&player=small" type="text/javascript" charset="utf-8"></script>
+    </div>
+    <P class="episodes-content">In this podcast, hosts and besties Amanda Rose and Kevin Ryan take an unfiltered look at topics on the human condition, sharing their thoughts, experiences, and what little advice they can muster from their short time on Earth. No topic is off limits and philosophical tangents are guaranteed on this existential journey broadcast.</P>
+    <div class="episodes-foot">
+        <h1>EPISODES</h1>
     </div>
 </body>
 </html>
