--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amateure's Guide to Humanity | Poodcast | Home Page</title>
-    <link rel="shortcut icon" type="image/jpg" href="images/favicon.svg"/>
+    <title>Amateur's Guide to Humanity | Podcast | Home Page</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/main-logo.svg"/>
     <link rel = "stylesheet" href="styles/styles.css">
 </head>
 <body class="home-page">
     <!--Navbar-->
     <div class="navbar">
-        <div class="container flex">
-            <a href="index.html"><img class="logo" src="images/header-image.png"></a>
+        <div class="container flex navbar">
+            <a class = "logo" href = "index.html"><img src="images/header-image.svg"></a>
             <nav>
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
@@ -23,8 +23,6 @@
             </nav>
         </div>
     </div>
-    <div class="filler-body">
-
-    </div>
+    <p class="home-info">Amateur’s Guide to Humanity is less of a literal manual and more of an invitation to join a community of wandering souls ruminating on life and committing to live it both bravely and with a grain of salt.</p>
 </body>
 </html>
