--- a/about.html
+++ b/about.html
@@ -4,34 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amateure's Guide to Humanity | Poodcast | About</title>
+    <title>Amateur's Guide to Humanity | Podcast | About</title>
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.svg"/>
     <link rel = "stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body class="about-page">
     <!--Navbar-->
     <div class="navbar">
-        <div class="container flex">
-            <a href="index.html"><img class="logo" src="images/header-image.png"></a>
+        <div class="container flex navbar">
+            <a class = "logo" href = "index.html"><img src="images/header-image.svg"></a>
             <nav>
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
-                    <li><a class="current-page" href="about.html">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
                     <li id="last-nav"><a href="social.html">SOCIAL</a></li>
                 </ul>
             </nav>
         </div>
     </div>
-    <div class="flex">
-        <h1 class="episodes-header">Meet the Amateurs</h1>
+    <div class="about-flex">
+    <div class = "about-info-amanda">
+        <p class="mom">MOM. MEMOIRIST. MARKETER. MOTIVATOR.</p>
+        <p class="about-names">AMANDA ROSE</p>
     </div>
-    <div class = "container grid about">
-        <div></div>
-        <img src="images/mandi-kevin.png">
-        <div></div>
-    </div>
+    <div class = "about-content">
+        <div class="red-circle-one">
+            <img src="images/about-image-left.png">
+        </div>
+        <div class="red-circle-two">
+            <ul>
+                <li>ENNEAGRAM: 4W3</li>
+                <li>AURA: PURPLE</li>
+                <li>SIGN: LEO</li>
+                <li>IDOL: CHER</li>
+                <li>OBSESSION: SCI-FI</li>
+                </ul>
+        </div>
+        <div class="blue-circle-one">
+            <ul>
+                <li>ENNEAGRAM: 2W3</li>
+                <li>AURA: BLUE</li>
+                <li>SIGN: VIRGO</li>
+                <li>IDOL: JEFF GOLDBLUM</li>
+                <li>OBSESSION: SNL</li>
+                </ul>
+        </div>
+        <div class="blue-circle-two">
+            <img src="images/about-image-right.png">
+        </div>
 
+
+
+
+    </div>
+    <div class = "about-info-kevin">        
+        <p class="about-names">KEVIN RYAN</p>
+        <p class="dad">DAD. DRUMMER. DABBLER. DREAMER.</p>
+    </div>
     </div>
 </body>
 </html>
