--- a/social.html
+++ b/social.html
@@ -4,31 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amateure's Guide to Humanity | Poodcast | Social</title>
+    <title>Amateur's Guide to Humanity | Podcast | Social</title>
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.svg"/>
     <link rel = "stylesheet" href="styles/styles.css">
 </head>
 <body>
     <!--Navbar-->
     <div class="navbar">
-        <div class="container flex">
-            <a href="index.html"><img class="logo" src="images/header-image.png"></a>
+        <div class="container flex navbar">
+            <a class = "logo" href = "index.html"><img src="images/header-image.svg"></a>
             <nav>
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
-                    <li id="last-nav"><a class="current-page" href="social.html">SOCIAL</a></li>
+                    <li id="last-nav"><a href="social.html">SOCIAL</a></li>
                 </ul>
             </nav>
         </div>
     </div>
-    <h1 class="flex">Find us on Social Media</h1>
-    <div class="flex social">
-        <img src="images/facebook.svg">
-        <img src="images/instagram.svg">
-        <img src="images/twitter.svg">
-        <img src="images/youtube.svg">
+    <div class="social-content">
+        <img class = "social-left-img" src="images/social-left.png">
+        <div class = "social-icons">
+            <div class="facebook">
+                <p>facebook</p>
+                <img src="images/facebook.svg">
+            </div>
+            <div class="instagram">
+                <img src="images/instagram.svg">
+                <p>instagram</p>
+            </div>
+        </div>
+        <img class="social-right-img" src="images/social-right.png">
     </div>
 </body>
 </html>
