--- a/subscribe.html
+++ b/subscribe.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amateure's Guide to Humanity | Poodcast | Subscribe</title>
+    <title>Amateur's Guide to Humanity | Podcast | Subscribe</title>
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.svg"/>
     <link rel = "stylesheet" href="styles/styles.css">
 </head>
 <body>
     <!--Navbar-->
     <div class="navbar">
-        <div class="container flex">
-            <a href="index.html"><img class="logo" src="images/header-image.png"></a>
+        <div class="container flex navbar">
+            <a class = "logo" href = "index.html"><img src="images/header-image.svg"></a>
             <nav>
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a class="current-page" href="subscribe.html">SUBSCRIBE</a></li>
+                    <li><a href="subscribe.html">SUBSCRIBE</a></li>
                     <li id="last-nav"><a href="social.html">SOCIAL</a></li>
                 </ul>
             </nav>
