--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amateur's Guide to Humanity | Podcast | About</title>
-    <link rel="shortcut icon" type="image/jpg" href="images/favicon.svg"/>
+    <link rel="shortcut icon" type="image/jpg" href="images/main-logo.svg"/>
     <link rel = "stylesheet" href="styles/styles.css">
 </head>
 <body class="about-page">
