cleaned up the episodes page as there are currently no episodes

--- a/episodes.html
+++ b/episodes.html
@@ -24,10 +24,9 @@
         </div>
     </div>
     <div class="flex">
-        <h1 class="episodes-header">Listen to our episdoes</h1>
+        <h1 class="episodes-header"></h1>
     </div>
     <div class = "container grid episodes">
-        <div id="buzzsprout-player-9431975"></div><script src="https://www.buzzsprout.com/1870575/9431975-how-to-community.js?container_id=buzzsprout-player-9431975&player=small" type="text/javascript" charset="utf-8"></script>
     </div>
     <P class="episodes-content">In this podcast, hosts and besties Amanda Rose and Kevin Ryan take an unfiltered look at topics on the human condition, sharing their thoughts, experiences, and what little advice they can muster from their short time on Earth. No topic is off limits and philosophical tangents are guaranteed on this existential journey broadcast.</P>
     <div class="episodes-foot">
