--- a/about.html
+++ b/about.html
@@ -23,6 +23,8 @@
             </nav>
         </div>
     </div>
+
+    <!--Body-->
     <div class="about-flex">
     <div class = "about-info-amanda">
         <p class="mom">MOM. MEMOIRIST. MARKETER. MOTIVATOR.</p>
@@ -53,10 +55,6 @@
         <div class="blue-circle-two">
             <img src="images/about-image-right.png">
         </div>
-
-
-
-
     </div>
     <div class = "about-info-kevin">        
         <p class="about-names">KEVIN RYAN</p>
