--- a/episodes.html
+++ b/episodes.html
@@ -5,29 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amateur's Guide to Humanity | Podcast | Episodes</title>
-    <link rel="shortcut icon" type="image/jpg" href="images/main-logo.svg"/>
-    <link rel = "stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="episodes-page">
-    <!--Navbar-->
-    <div class="navbar">
-        <div class="container flex navbar">
-            <a class = "logo" href = "index.html"><img src="images/header-image.svg"></a>
+    <div class="title-bar">
+        <div class="container flex">
+            <a class="logo" href="index.html"><img src="images/header-image.svg" alt=""></a>
             <nav>
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
-                    <li id="last-nav"><a href="social.html">SOCIAL</a></li>
+                    <li><a href="social.html">SOCIAL</a></li>
                 </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </nav>
         </div>
     </div>
-    <div class = "container grid episodes">
-    </div>
-    <P class="episodes-content">In this podcast, hosts and besties Amanda Rose and Kevin Ryan take an unfiltered look at topics on the human condition, sharing their thoughts, experiences, and what little advice they can muster from their short time on Earth. No topic is off limits and philosophical tangents are guaranteed on this existential journey broadcast.</P>
-    <div class="episodes-foot">
-        <h1>EPISODES</h1>
-    </div>
+    <p class="episodes-content">In this podcast, hosts and besties Amanda Rose and Kevin Ryan take an unfiltered look at topics on the human condition, sharing their thoughts, experiences, and what little advice they can muster from their short time on Earth. No topic is off limits and philosophical tangents are guaranteed on this existential journey broadcast.</p>
+
+    <footer class="episodes-foot"><h1>EPISODES</h1></footer>
+    <script>
+        const hamburger = document.querySelector(".hamburger");
+        const navMenu = document.querySelector("nav ul");
+
+        hamburger.addEventListener("click", mobileMenu);
+
+        function mobileMenu() {
+        hamburger.classList.toggle("active");
+        navMenu.classList.toggle("active");
+        }
+    </script>
 </body>
 </html>
