--- a/social.html
+++ b/social.html
@@ -5,37 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amateur's Guide to Humanity | Podcast | Social</title>
-    <link rel="shortcut icon" type="image/jpg" href="images/main-logo.svg"/>
-    <link rel = "stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <!--Navbar-->
-    <div class="navbar">
-        <div class="container flex navbar">
-            <a class = "logo" href = "index.html"><img src="images/header-image.svg"></a>
+<body class="social-page">
+    <div class="title-bar">
+        <div class="container flex">
+            <a class="logo" href="index.html"><img src="images/header-image.svg" alt=""></a>
             <nav>
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
-                    <li id="last-nav"><a href="social.html">SOCIAL</a></li>
+                    <li><a href="social.html">SOCIAL</a></li>
                 </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </nav>
         </div>
     </div>
     <div class="social-content">
-        <img class = "social-left-img" src="images/social-left.png">
-        <div class = "social-icons">
+        <img class="social-img" src="images/social-left.png" alt="">
+        <div class="social-icons">
             <div class="facebook">
                 <p>facebook</p>
-                <img src="images/facebook.svg">
+                <img src="images/facebook.svg" alt="">
             </div>
             <div class="instagram">
-                <img src="images/instagram.svg">
+                <img src="images/instagram.svg" alt="">
                 <p>instagram</p>
             </div>
         </div>
-        <img class="social-right-img" src="images/social-right.png">
+        <img src="images/social-right.png" alt="" class="social-img">
     </div>
+
+
+
+
+    <script>
+        const hamburger = document.querySelector(".hamburger");
+        const navMenu = document.querySelector("nav ul");
+
+        hamburger.addEventListener("click", mobileMenu);
+
+        function mobileMenu() {
+        hamburger.classList.toggle("active");
+        navMenu.classList.toggle("active");
+        }
+    </script>
 </body>
 </html>
