--- a/subscribe.html
+++ b/subscribe.html
@@ -5,23 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amateur's Guide to Humanity | Podcast | Subscribe</title>
-    <link rel="shortcut icon" type="image/jpg" href="images/main-logo.svg"/>
-    <link rel = "stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <!--Navbar-->
-    <div class="navbar">
-        <div class="container flex navbar">
-            <a class = "logo" href = "index.html"><img src="images/header-image.svg"></a>
+<body class="subscribe-page">
+    <div class="title-bar">
+        <div class="container flex">
+            <a class="logo" href="index.html"><img src="images/header-image.svg" alt=""></a>
             <nav>
                 <ul>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="subscribe.html">SUBSCRIBE</a></li>
-                    <li id="last-nav"><a href="social.html">SOCIAL</a></li>
+                    <li><a href="social.html">SOCIAL</a></li>
                 </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </nav>
         </div>
     </div>
+    <p class="subscribe-content">Subscribe Content</p>
+    <script>
+        const hamburger = document.querySelector(".hamburger");
+        const navMenu = document.querySelector("nav ul");
+
+        hamburger.addEventListener("click", mobileMenu);
+
+        function mobileMenu() {
+        hamburger.classList.toggle("active");
+        navMenu.classList.toggle("active");
+        }
+    </script>
 </body>
 </html>
