--- a/social.html
+++ b/social.html
@@ -29,14 +29,14 @@
     <div class="social-content">
         <img class="social-img" src="images/social-left.png" alt="">
         <div class="social-icons">
-            <div class="facebook">
+            <a class = "facebook" href="https://www.facebook.com/amateursguidetohumanity"><div class="facebook">
                 <p>facebook</p>
                 <img src="images/facebook.svg" alt="">
-            </div>
-            <div class="instagram">
+            </div></a>
+            <a href="https://www.instagram.com/amateursguidetohumanity/" class="instagram"><div class="instagram">
                 <img src="images/instagram.svg" alt="">
                 <p>instagram</p>
-            </div>
+            </div></a>
         </div>
         <img src="images/social-right.png" alt="" class="social-img">
     </div>
