--- a/subscribe.html
+++ b/subscribe.html
@@ -27,6 +27,14 @@
         </div>
     </div>
     <p class="subscribe-content">Subscribe Content</p>
+
+
+    <!--Apple Podcasts
+Spotify
+Google Podcast
+Amazon Musc-->
+
+
     <script>
         const hamburger = document.querySelector(".hamburger");
         const navMenu = document.querySelector("nav ul");
