Added the subscribe page. Fixed mobile view for a few pages

--- a/subscribe.html
+++ b/subscribe.html
@@ -26,13 +26,26 @@
             </nav>
         </div>
     </div>
-    <p class="subscribe-content">Subscribe Content</p>
+    <div class="subscriptions">
+        <a href="#"><div class="apple ">
+            <img src="images/apple-podcasts.svg" alt="" class="icon">
+            <p>apple podcasts</p>
+        </div></a>
+        <a href="https://open.spotify.com/show/6LfoWB3f27c7FXhy7PbZjM"><div class="spotify">
+            <img src="images/spotify.svg" alt="" class="icon">
+            <p>spotify</p>
+        </div></a>
+        <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy5idXp6c3Byb3V0LmNvbS8xODcwNTc1LnJzcw=="><div class="google">
+            <img src="images/google-podcasts.svg" alt="" class="icon">
+            <p>google podcasts</p>
+        </div></a>
+        <a href="https://music.amazon.com/podcasts/ac875a24-859f-423e-8952-521b97b80ff9/amateur's-guide-to-humanity"><div class="amazon">
+            <img src="images/amazon-music.svg" alt="" class="icon">
+            <p>amazon music</p>
+        </div></a>
+    </div>
 
-
-    <!--Apple Podcasts
-Spotify
-Google Podcast
-Amazon Musc-->
+    <footer class="subscribe-foot"><h1>SUBSCRIBE</h1></footer>
 
 
     <script>
