--- a/about.html
+++ b/about.html
@@ -26,7 +26,22 @@
             </nav>
         </div>
     </div>
-    <p class="about-content">About Content. Work in Progress</p>
+    <div class="about-content container">
+        <div class="amanda">
+            <h3>MOM. MEMOIRIST. MARKETER. MOTIVATOR</h3>
+            <h2>AMANDA ROSE</h2>
+        </div>
+        <div class="pic-row">
+            <img src="images/about-image-left.png" alt="">
+            <div class="left-info">
+                <p>About Mandi</p>
+            </div>
+            <div class="right-info">
+                <p>About Kevin</p>
+            </div>
+            <img src="images/about-image-right.png" alt="">
+        </div>
+    </div>
     <script>
         const hamburger = document.querySelector(".hamburger");
         const navMenu = document.querySelector("nav ul");
