redesign of home page

--- a/episodes.html
+++ b/episodes.html
@@ -13,9 +13,9 @@
             <a class="logo" href="index.html"><img src="images/header-image.svg" alt=""></a>
             <nav>
                 <ul>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="subscribe.html">SUBSCRIBE</a></li>
                     <li><a href="social.html">SOCIAL</a></li>
                 </ul>
                 <div class="hamburger">
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="list-of-episodes">
-        <iframe id="player_iframe" src="https://www.buzzsprout.com/1870575?client_source=large_player&iframe=true&referrer=https%3A%2F%2Fwww.buzzsprout.com%2F1870575%2Fpodcast%2Fembed" loading="lazy" width="70%" height="400" frameborder="0" scrolling="yes" title="Amateur's Guide to Humanity"></iframe>
+        <iframe id="player_iframe" src="https://www.buzzsprout.com/1870575?client_source=large_player&iframe=true&referrer=https%3A%2F%2Fwww.buzzsprout.com%2F1870575%2Fpodcast%2Fembed" loading="lazy" width="900px" height="400" frameborder="0" scrolling="yes" title="Amateur's Guide to Humanity"></iframe>
         <div id='buzzsprout-small-player'></div><script type='text/javascript' charset='utf-8' src='https://www.buzzsprout.com/1870575.js?container_id=buzzsprout-small-player&player=small'></script>
     </div>
     <!--<p class="episodes-content">In this podcast, hosts and besties Amanda Rose and Kevin Ryan take an unfiltered look at topics on the human condition, sharing their thoughts, experiences, and what little advice they can muster from their short time on Earth. No topic is off limits and philosophical tangents are guaranteed on this existential journey broadcast.</p> -->
