--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 </head>
 <body class="home-page">
     <div class="title-bar">
-        <div class="container flex">
+        <div class="container flex title">
             <a class="logo" href="index.html"><img src="images/header-image.svg" alt=""></a>
             <nav>
                 <ul>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="subscribe.html">SUBSCRIBE</a></li>
                     <li><a href="social.html">SOCIAL</a></li>
                 </ul>
                 <div class="hamburger">
@@ -34,10 +34,28 @@
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-            </nav>
+            </nav>  
         </div>
     </div>
-    <p class="home-content">Amateur’s Guide to Humanity is less of a literal manual and more of an invitation to join a community of wandering souls ruminating on life and committing to live it both bravely and with a grain of salt.</p>
+    <div class="mobile-image">
+        <img src="images/new-home-bg.png" alt="">
+    </div>
+    <div class="home-content">
+        <p>Amateur’s Guide to Humanity is less of a literal manual and more of an invitation to join a community of wandering souls ruminating on life and committing to live it both bravely and with a grain of salt.</p>
+    </div>
+    <div class="subscribe">
+        <h2>SUBSCRIBE</h2>
+        <div>
+            <a href="https://podcasts.apple.com/us/podcast/amateurs-guide-to-humanity/id1594411464">
+                <img src="images/apple-podcasts.svg" alt="" class="icon"></a>
+            <a href="https://open.spotify.com/show/6LfoWB3f27c7FXhy7PbZjM">
+                <img src="images/spotify.svg" alt="" class="icon"></a>
+            <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkcy5idXp6c3Byb3V0LmNvbS8xODcwNTc1LnJzcw==">
+                <img src="images/google-podcasts.svg" alt="" class="icon"></a>
+            <a href="https://music.amazon.com/podcasts/ac875a24-859f-423e-8952-521b97b80ff9/amateur's-guide-to-humanity">
+                <img src="images/amazon-music.svg" alt="" class="icon"></a>
+        </div>
+    </div>
     <script>
         const hamburger = document.querySelector(".hamburger");
         const navMenu = document.querySelector("nav ul");
