--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
             <a class="logo" href="index.html"><img src="images/header-image.svg" alt=""></a>
             <nav>
                 <ul>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="subscribe.html">SUBSCRIBE</a></li>
                     <li><a href="social.html">SOCIAL</a></li>
                 </ul>
                 <div class="hamburger">
