--- a/social.html
+++ b/social.html
@@ -5,14 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amateur's Guide to Humanity | Podcast | Social</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="shortcut icon" type="image/jpg" href="images/favicon.svg"/>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L3TDSEWZV4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L3TDSEWZV4');
+</script>
 </head>
-<body class="social-page">
-    <div class="title-bar">
-        <div class="container flex">
-            <a class="logo" href="index.html"><img src="images/header-image.svg" alt=""></a>
-            <nav>
-                <ul>
+
+<body>
+    <div class="container social-page">
+        <div class="header">
+            <a href="index.html" class="logo"><img src="images/header-image.svg" alt=""></a>
+            <div class="nav">
+                <ul class = "navbar">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="episodes.html">EPISODES</a></li>
                     <li><a href="about.html">ABOUT</a></li>
@@ -23,37 +35,36 @@
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-            </nav>
+            </div>
+        </div>
+
+        <!--Main Body-->
+        <img src="images/heart-bg.svg" alt="" class="heart-bg">
+        <div class="social-content">
+            <img class="social-img-left" src="images/social-left.png" alt="">
+            <div class="social-icons">
+                <a class = "facebook" href="https://www.facebook.com/amateursguidetohumanity"><div class="facebook">
+                    <p>facebook</p>
+                    <img src="images/facebook.svg" alt="">
+                </div></a>
+                <a href="https://www.instagram.com/amateursguidetohumanity/" class="instagram"><div class="instagram">
+                    <img src="images/instagram.svg" alt="">
+                    <p>instagram</p>
+                </div></a>
+            </div>
+            <img src="images/social-right.png" alt="" class="social-img-right">
         </div>
     </div>
-    <div class="social-content">
-        <img class="social-img" src="images/social-left.png" alt="">
-        <div class="social-icons">
-            <a class = "facebook" href="https://www.facebook.com/amateursguidetohumanity"><div class="facebook">
-                <p>facebook</p>
-                <img src="images/facebook.svg" alt="">
-            </div></a>
-            <a href="https://www.instagram.com/amateursguidetohumanity/" class="instagram"><div class="instagram">
-                <img src="images/instagram.svg" alt="">
-                <p>instagram</p>
-            </div></a>
-        </div>
-        <img src="images/social-right.png" alt="" class="social-img">
-    </div>
-
-
-
-
     <script>
-        const hamburger = document.querySelector(".hamburger");
-        const navMenu = document.querySelector("nav ul");
-
-        hamburger.addEventListener("click", mobileMenu);
-
-        function mobileMenu() {
-        hamburger.classList.toggle("active");
-        navMenu.classList.toggle("active");
-        }
+            const hamburger = document.querySelector(".hamburger");
+            const navMenu = document.querySelector(".nav ul");
+    
+            hamburger.addEventListener("click", mobileMenu);
+    
+            function mobileMenu() {
+            hamburger.classList.toggle("active");
+            navMenu.classList.toggle("active");
+            }
     </script>
-</body>
-</html>
+    </body>
+    </html>
