--- a/episodes.html
+++ b/episodes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amateur's Guide to Humanity | Podcast | Episodes</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="shortcut icon" type="image/jpg" href="images/favicon.svg"/>
+    <link rel="shortcut icon" type="image/jpg" href="images/main-logo.svg"/>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-L3TDSEWZV4"></script>
