--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
         <img src="images/heart-bg.svg" alt="" class="heart-bg">
         <div class="about-content">
             <div class="top-row">
-                <p>MOM. MEMOIRIST. MARKETER. MOTIVATOR.</p>
-                <h2>AMANDA ROSE</h2>
+                <p class="amanda-desc">MOM. MEMOIRIST. MARKETER. MOTIVATOR.</p>
+                <p class="amanda">AMANDA ROSE</p>
             </div>
             <div class="middle-row">
                 <img class="left-image" src="images/about-image-left.png" alt="">
@@ -64,8 +64,8 @@
                 <img class="right-image" src="images/about-image-right.png" alt="">
             </div>
             <div class="bottom-row">
-                <h2>KEVIN RYAN</h2>
-                <p>DAD. DRUMMER. DABBLER. DREAMER</p>
+                <p class="kevin">KEVIN RYAN</p>
+                <p class="kevin-desc">DAD. DRUMMER. DABBLER. DREAMER</p>
             </div>
         </div>
     </div>
