--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="images/heart-bg.svg" alt="" class="heart-bg">
         <p class="home-content">Amateur’s Guide to Humanity is less of a literal manual and more of an invitation to join a community of wandering souls ruminating on life and committing to live it both bravely and with a grain of salt.</p>
         <div class="subscribe">
-            <h2>SUBSCRIBE</h2>
+            <p>SUBSCRIBE</p>
             <div>
                 <a href="https://podcasts.apple.com/us/podcast/amateurs-guide-to-humanity/id1594411464">
                     <img src="images/apple-podcasts.svg" alt="" class="icon"></a>
