fixed the white gap on the home page and fixed the about page image cut off

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                     <img src="images/amazon-music.svg" alt="" class="icon"></a>
             </div>
         </div>
+        <div class="bg-subscribe">
+            <!--Filler to fix the white space between the home image and Subscribe-->
+        </div>
 
     </div>
 
